# scaffold-rs

./: ARCHITECTURE.md  LICENSE-MIT  README.md
template/: .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  Makefile  README.md  cargo-generate.toml
template/.github/workflows/: audit.yml  build.yml  coverage.yml  template_values.toml
template/src/: app.rs  async_utils.rs  cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  time_utils.rs
template/tests/: async_tests.rs  integration_tests.rs  integrations_tests.rs  test_with_setup.rs  time_tests.rs
template/tests/common/: mod.rs
