[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"                                  # For defining error types
anyhow = "1.0"                                     # For error propagation
clap = { version = "4.4", features = ["derive"] }  # For easy cli creation
config = "0.13"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# mockall = "0.11.0"  # For mocking objs in tests
