[package]
name = "{{project-name}}"
lib = { name = "{{project-name | snake_case}}", path = "src/lib.rs" }
version = "0.1.0"
edition = "2021"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"                                                   # For defining error types
anyhow = "1.0"                                                      # For error propagation
clap = { version = "4.4", features = ["derive"] }                   # For easy cli creation
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
# test-case = "3.1"       # For parameterized tests
# rstest = "0.18"         # For test fixtures
# tempfile = "3.8"        # For temp file creation in tests
# criterion = "0.5"       # For benchmarking

[features]
default = []
async = ["tokio", "chrono"]

[dev-dependencies]
# mockall = "0.11.0"  # For mocking objs in tests
